Fixed background contrast issues for user events page

--- a/mayan/apps/appearance/static/appearance/css/base.css
+++ b/mayan/apps/appearance/static/appearance/css/base.css
@@ -397,6 +397,17 @@ a i {
     color: #d9534f;
 }
 
+.btn-danger {
+  color: #ffffff !important;
+  background-color: #2c3e50 !important;
+  border-color: #2c3e50 !important; 
+}
+
+a {
+  color: #000000;
+  /* text-decoration: none; */
+}
+
 .btn-default.btn-outline:hover,
 .btn-primary.btn-outline:hover,
 .btn-success.btn-outline:hover,
